--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "framer-motion": "^11.2.10",
     "lucide-react": "^0.383.0",
     "next": "14.2.3",
+    "nextjs-google-analytics": "^2.3.7",
     "react": "^18",
     "react-countup": "^6.5.3",
     "react-dom": "^18",
